# Ai-Employee-Hackathon

./: README.md
Bronze Tier/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
Bronze Tier/.claude/skills/: check-status.md  morning-briefing.md  process-inbox.md  update-dashboard.md
Bronze Tier/AI_Employee_Vault/: Business_Goals.md  Dashboard.md
Bronze Tier/watchers/: __init__.py
Gold Tier/: .env.example  .gitignore  CLAUDE.md  README.md  README_Gold.md  audit_logger.py  daily_briefing.sh  env_utils.py  main.py  mcp.json  orchestrator.py  pyproject.toml  ralph_loop.py  ralph_loop.sh  retry_handler.py  setup_odoo_reference.md  test_gold.py  test_silver.py  watchdog.py  weekly_ceo_briefing.sh
Gold Tier/.agents/skills/check-status/: SKILL.md
Gold Tier/.agents/skills/create-approval/: SKILL_create_approval.md
Gold Tier/.agents/skills/create-plan/: SKILL.md
Gold Tier/.agents/skills/error-recovery/: SKILL.md
Gold Tier/.agents/skills/morning-briefing/: SKILL.md
Gold Tier/.agents/skills/odoo-create-invoice/: SKILL.md
Gold Tier/AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
Gold Tier/mcp_servers/: browser_mcp.py  email_mcp.py  linkedin_mcp.py  odoo_mcp.py  payment_mcp.py
Gold Tier/odoo19-local/: docker-compose.yml  manage.sh
Gold Tier/odoo19-local/config/: odoo.conf
Gold Tier/ops/: cron.example
Gold Tier/tests/: test_browser_mcp.py  test_ralph_loop.py  test_resilience.py  test_silver_runtime.py
Gold Tier/watchers/: WhatsAppWatcher.py  base_watcher.py  filesystem_watcher.py  hitl_orchestrator.py
Silver Tier/: .gitignore  AGENTS.md  (+5 more)
(+22 files in other folders)
