[project]
name = "bronze-tier"
version = "0.1.0"
description = "Personal AI Employee - Bronze Tier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-employee = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["watchers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
